--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		</plugins>
 	</build>
 
+
 	<dependencies>
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -45,6 +46,14 @@
 			<artifactId>org.eclipse.jdt.annotation</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.eclipse.jdt/core -->
+		<dependency>
+			<groupId>org.eclipse.jdt</groupId>
+			<artifactId>core</artifactId>
+			<version>3.3.0-v_771</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>net.sf.squirrel-sql.thirdparty-non-maven</groupId>
